# RU-BioSynth

./: .gitignore  BioBliss.py  BioSynth.py  README.md  app-debug.py  app-gui.py  app.py  convert_kazusa_to_biosynth.py  convert_kazusa_to_biosynth_codon_usage_table.py  dna_utils.py  eliminating_dna_seq.py  file_utils.py  input_utils.py  main.py  pyproject.toml  requirements.txt  test_qt_installation.py  tox.ini
.github/workflows/: ci.yml  mac-os.yml  test-biosynth.yml  ubuntu.yml  windows.yml
algorithm/: eliminate_sequence.py  fsm.py
algorithms/: eliminate_sequence.py  elimination_manager.py  fsm.py
biosynth/: app-debug.py  convert_kazusa_to_biosynth.py
data/: app_data.py
execution/: app.py  gui.py  terminal.py
executions/: app_execution.py  execution_utils.py  shared_execution.py  terminal_execution.py
files/: c_file.txt  p_file.txt  results.txt  s_file-notvalid.txt  s_file-onecoding2.txt  s_file.txt
naive approach/: README.md
output/: BioSynth Report - 14-Aug-2025_00-20-52.html
report/: html_report_utils.py  pdf_report_utils.py  report.css  report.html  report2.css  report2.html
report_template/: report.html
settings/: app_settings.py  codon_usage_settings.py  costs_settings.py  pattern_settings.py  sequence_settings.py
test/: test_cost_utils.py  test_dna_utils.py  test_elimination_utils.py  test_fsm.py  test_input_utils.py
utils/: amino_acid_utils.py  amono_acid_utils.py  cost_utils.py  display_utils.py  dna_utils.py  elimination_utils.py  file_utils.py  fsm_utils.py  graph_creator.py  graph_utils.py  graphic_utils.py  info_utils.py  input_utils.py  output_utils.py  parser_utils.py  pdf_report_utils.py  table_cost_utils.py  text_utils.py
(+98 files in other folders)
