[tool.poetry]
name = "biosynth"
version = "1.0.0"
description = "A bioinformatics tool for DNA sequence optimization"
authors = ["Hadar Pur <hadarpur13@gmail.com>"]
readme = "README.md"
packages = [{include = "biosynth"}]

[tool.poetry.scripts]
biosynth = "biosynth.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
biopython = "^1.85"
bio = "^1.6.2"
Jinja2 = "^3.1.6"
PyQt5 = "^5.15.11"
pywebview = "^5.4"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
