[tool.poetry]
name = "biosynth"
version = "1.0.0"
description = "BioSynth eliminates unwanted patterns from DNA sequences using a biologically-informed cost model and efficient algorithms. It implements a finite state machine with two-base memory and a dynamic programming approach to generate minimum-cost sequences while preserving protein function, accounting for codon usage bias, and avoiding unwanted patterns. Supports both GUI and CLI for flexible synthetic DNA design."
authors = ["Hadar Pur <hadarpur13@gmail.com>"]
readme = "README.md"
packages = [{include = "biosynth"}]
license = "Apache-2.0"
include = ["LICENSE"]

[tool.poetry.scripts]
biosynth = "biosynth.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
biopython = "^1.85"
bio = "^1.6.2"
Jinja2 = "^3.1.6"
PyQt5 = "^5.15.11"
pywebview = "^5.4"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
